Working for Unity 2019.1.0f2

--- a/Assets/Plugins/Android/GoogleMobileAdsPlugin/AndroidManifest.xml
+++ b/Assets/Plugins/Android/GoogleMobileAdsPlugin/AndroidManifest.xml
@@ -11,10 +11,10 @@ required for displaying ads.
   <uses-sdk android:minSdkVersion="14"
       android:targetSdkVersion="19" />
   <application>
-  <!-- Your AdMob App ID will look similar to this
-        sample ID: ca-app-pub-3940256099942544~3347511713 -->
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-5129348250377085~1856868770"/>
+  <!-- Your AdMob App ID will look similar to this sample ID:
+    ca-app-pub-3940256099942544~3347511713 -->
+    <meta-data
+    android:name="com.google.android.gms.ads.APPLICATION_ID"
+    android:value="ca-app-pub-5129348250377085~1856868770"/>
   </application>
 </manifest>
